Modify code to make it more compact